Fixed gallery filter layout on mobile

--- a/assets/css/filter.scss
+++ b/assets/css/filter.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  flex-wrap: wrap;
   list-style: none;
 
   li {
